# gearbox-matching

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.tilt  Pipfile  README.md  Tiltfile  alembic.ini  config.env  docker-compose.yml  dockerrun.bash  gunicorn.conf.py  load_trials.py  match_form.py  nginx.conf  pedal.sql  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUGS.yml  FEATURE.yml
api/: Dockerfile  Pipfile  README.md  manage.py
api/app/: __init__.py
api/app/main/: __init__.py  config.py
api/app/test/: conftest.py  study_crud_TEST.py  test_algorithm_engine.py  test_arm.py  test_arm_treatment.py  test_criterion.py  test_criterion_has_tag.py  test_criterion_has_value.py  test_display_rules.py  test_el_criteria_has_criterion.py  test_eligibility_criteria.py  test_eligibility_criteria_has_note.py  test_get.py  test_input_type.py  test_input_type_has_value.py  test_login.py  test_note.py  test_ontology_code.py  test_site.py  test_site_has_study.py  test_study.py  test_study_algorithm_engine.py  test_study_links.py  test_study_version.py  test_tag.py  test_treatment.py  test_triggered_by.py  test_unittests.py  test_value.py  test_xyz.py
db/: README.md  pedal.sql  pedal_20191209.sql  pedal_20200615.sql  pedal_20200824.sql  pedal_populate.inactive  pedal_populate.sql  pedal_v_2.mwb
db/old/: pedal.mwb  pedal_20200824.sql  pedal_populate_20200615.sql
deployment/wsgi/: gunicorn.conf.py  wsgi.py
doc/: api.md  eligibility-criteria-transform.md
migrations/: env.py
migrations/versions/: 078537cccdd9_modified_criterion_staging_model_.py  0d8f98ceec8d_added_unique_constraints_to_study_links_.py  0efe88d98640_added_adjudication_status_and_echc_.py  14f21c3d226d_added_create_date_to_study_external_id_.py  1868fd0574b6_remove_fk_relationship_between_raw_.py  1aa0e74815e7_added_study_version_to_study_version_.py  1b17bb764a3f_added_raw_criteria_table_and_.py  1ff9aac922b2_added_not_null_constraint_on_source_.py  241619ddac70_added_create_date_to_raw_criteria_model.py  276d1e9b029e_fix_enum_type_names.py  2f25a654c48d_added_echc_ids_to_criterion_staging_.py  33779211b25c_added_unique_constraint_to_el_criteria_.py  3a26a8e3543c_added_country_status_city_state_zip_to_.py  3c0909b78f1b_modified_unique_constraint_code_type_.py  3f15449b3069_new_table_criterion_staging.py  41d465e25870_modified_study_algorithm_engine_.py  47852b3ec5fd_removed_status_from_site_model.py  4e35df2e1509_added_last_updated_by_to_criterion_.py  4ff089373353_added_not_null_constraint_to_study_.py  5ed675c4e2da_added_source_table_and_relationships_.py  5f38941a18aa_added_eligibility_criteria_info_table_.py  5f582ee52375_rename_study_version_to_study_version_.py  60a3569ba935_added_table_study_external_ids.py  68407e9294af_modified_study_external_id_unique_.py  6ace87aa7e5d_added_eligibility_criteria_info_table_.py  728f01902d1c_added_create_date_to_study_links.py  769593c95076_addded_name_to_saved_input_model.py  77a9fbd47800_added_unique_constraint_code_unit_to_.py  7b2f5dbef9e5_modified_value_model_removed_code.py  7b8a2262145a_removed_fields_from_criterion_staging.py  7c31cc75cb6e_modified_value_model_changed_type_to_is_.py  7ed5eca6c0ce_fix_cascade_delete_on_pre_annotated_.py  81723c9ecb28_added_el_criteria_has_criterion_id_to_.py  8295f20f3a8e_modified_criterion_staging_model_added_.py  8b3b6fc63a79_modified_criterion_staging_model_.py  9081b74448eb_added_pre_annotated_tables_for_matched_.py  93c15139a439_removed_eligibility_criteria_info_table_.py  96781d481b2e_merge_4785_1ff9.py  98aa0da41177_.py  a10750c00d87_full_schema_first_migration.py  (+25 more)
postgres-data/: td_algorithm_engine.tsv  td_criterion.tsv  td_criterion_has_tag.tsv  td_criterion_has_value.tsv  td_display_rules.tsv  td_el_criteria_has_criterion.tsv  td_eligibility_criteria.tsv  td_eligibility_criteria_info.tsv  td_input_type.tsv  td_site.tsv  td_site_has_study.tsv  td_study.tsv  td_study_algorithm_engine.tsv  td_study_links.tsv  td_study_version.tsv  td_tag.tsv  td_triggered_by.tsv  td_value.tsv
postgres-init/: init.sh
src/gearbox/: admin_login.py  auth.py  config.py  deps.py  log_config.py  main.py  save.py  user_input.py
src/gearbox/crud/: __init__.py  (+32 more)
src/mds/: .env  config.py  deps.py  main.py  save.py
tests/: conftest.py  test_criterion.py  test_criterion_staging.py  test_db.py  test_el_criteria_has_criterion.py  test_eligibility_criteria.py  test_eligibility_criteria_info.py  test_input_type.py  test_input_validation.py  test_main.py  test_match.py  test_match_condition_logic.py  test_match_conditions.py  test_match_form.py  test_new_criterion.py  test_raw_criteria.py  test_save.py  test_server.py  test_site.py  test_study.py  test_study_algorithm_engine.py  test_study_has_patient.py  test_study_link.py  test_study_updates.py  test_study_version.py  test_study_version_eligibility_criteria.py  test_study_version_study_algorithm.py  test_study_with_site.py  test_unit.py  test_utils.py  test_value.py
tests/data/: algorithm_logic.json  algorithm_logic_invalid_el_criteria_has_criterion_ids.json  algorithm_logic_invalid_schema.json  algorithm_logic_load1.json  algorithm_logic_load2.json  algorithm_logic_load3.json  algorithm_logic_load6.json  eligibilityCriteria.json  match_conditions_compare_dat.json  match_form_compare_dat.json  match_form_update_compare_dat.json  match_form_update_compare_dat_new_value.json  match_form_update_compare_dat_new_value_existing_unit.json  match_form_update_compare_dat_new_value_existing_unit_input.json  match_form_update_compare_dat_new_value_input.json  match_form_update_compare_dat_new_value_input_bad_number.json  match_form_update_new_field.json  new_algorithm_logic.json  studies.json  study_has_patient_load1.json  test.out  test_raw_criteria.json  test_raw_criteria_exact_dup.json  test_raw_criteria_invalid_nct_id.json  test_raw_criteria_invalid_schema.json  test_raw_criteria_reupload.json  test_raw_criteria_reupload_with_changes.json  update_algorithm_logic.json
tf_files/: main.tf  state.tf  variables.tf
tf_files/prod/: prod.tfvars
(+244 files in other folders)
