[tool.poetry]
name = "gearbox"
version = "1.6.2"
description = "Gearbox Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version="^0.11.2"}
gunicorn = "^20.0.4"
gino = {version = "^1.0.0", extras = ["starlette"]}
alembic = "^1.3"
gen3authz = "^1.0.0"
indexclient = "^2.1.0"
httpx = "^0.12.1"
cryptography = "3.4.8"
authutils = "^5.0.4"
cdislogging = "^1.0"
click = "==7.1.*,>=7.1.2"
pyyaml = "==5.4.*,>=5.4.1"
setuptools = "==52.0.*,>=52.0.0"
dataclasses-json = "==0.5.*,>=0.5.2"
pytest-asyncio = "^0.15.1"
jsonpath-ng = "^1.5.3"
elasticsearch = "<7.0"
bleach = ">=3.3.1"
tenacity = ">=8.0.0"
pydantic = {extras = ["email"], version = "~1.8.1"}
SQLAlchemy = "^1.4.22"
pytest-postgresql = "^4.1.1"
psycopg = "^3.0.11"
psycopg2 = "^2.9.3"
deepdiff = "^5.8.0"
importlib-metadata = "1.4"

[tool.poetry.dev-dependencies]
pytest = "7.0.0"
pytest-cov = "^2.8"
pyyaml = "^5.3.1"
requests = "^2.22"
respx = "*"
nest-asyncio = "^1.5.1"

[tool.poetry.plugins."gearbox.modules"]
"user_input" = "gearbox.routers.user_input"
"site" = "gearbox.routers.site"
"study" = "gearbox.routers.study"
"eligibility_criteria" = "gearbox.routers.eligibility_criteria"
"match_conditions" = "gearbox.routers.match_conditions"
"criterion_value" = "gearbox.routers.criterion_value"
"match_form" = "gearbox.routers.match_form"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
