[tool.poetry]
name = "gearbox"
version = "1.6.2"
description = "Gearbox Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version="^0.11.2"}
gunicorn = "^20.0.4"
gino = {version = "^1.0.0", extras = ["starlette"]}
alembic = "^1.3"
gen3authz = "^1.0.0"
indexclient = "^2.1.0"
httpx = "^0.12.1"
cryptography = "3.4.8"
authutils = "^5.0.4"
cdislogging = "^1.0"
click = "==7.1.*,>=7.1.2"
pyyaml = "==5.4.*,>=5.4.1"
dataclasses-json = "==0.5.*,>=0.5.2"
pytest-asyncio = "^0.15.1"
jsonpath-ng = "^1.5.3"
elasticsearch = "<7.0"
bleach = ">=3.3.1"
tenacity = ">=8.0.0"
pydantic = {extras = ["email"], version = "~1.8.1"}
SQLAlchemy = "^1.4.22"
pytest-postgresql = "^4.1.1"
psycopg = "^3.0.11"
psycopg2 = "^2.9.3"
deepdiff = "^5.8.0"
importlib-metadata = "1.4"
certifi = "^2022.6.15"
python-dateutil = "^2.8.2"
six = "^1.16.0"
urllib3 = "^1.26.9"
pcdc-aws-client = {git = "https://github.com/chicagopcdc/pcdc-aws-client.git", rev = "1.2.3"}
jsonschema = "^4.17.3"


[tool.poetry.dev-dependencies]
pytest = "7.0.0"
pytest-cov = "^2.8"
pyyaml = "^5.3.1"
requests = "^2.22"
respx = "*"
nest-asyncio = "^1.5.1"

[tool.poetry.plugins."gearbox.modules"]
"user_input" = "gearbox.routers.user_input"
"site" = "gearbox.routers.site"
"study" = "gearbox.routers.study"
"eligibility_criteria" = "gearbox.routers.eligibility_criteria"
"eligibility_criteria_info" = "gearbox.routers.eligibility_criteria_info"
"el_criteria_has_criterion" = "gearbox.routers.el_criteria_has_criterion"
"match_conditions" = "gearbox.routers.match_conditions"
"match_form" = "gearbox.routers.match_form"
"value" = "gearbox.routers.value"
"criterion"="gearbox.routers.criterion"
"study_algorithm_engine" = "gearbox.routers.study_algorithm_engine"
"study_version" = "gearbox.routers.study_version"
"study_version_eligibility_criteria" = "gearbox.routers.study_version_eligibility_criteria"
"study_version_study_algorithm" = "gearbox.routers.study_version_study_algorithm"
"study_link" = "gearbox.routers.study_link"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
