[tool.poetry]
name = "gearbox"
version = "1.6.2"
description = "Gearbox Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version="^0.34.2"}
gunicorn = "^23.0.0"
alembic = "^1.3"
gen3authz = "^1.0.0"
indexclient = "^2.1.0"
httpx = ">=0.23.0,<1.0.0"
httpcore = ">=0.17.2"
h11 = ">=0.13,<0.15"
cryptography = ">=44.0.1,<45.0.0"
cdislogging = "^1.0"
click = "==7.1.*,>=7.1.2"
pyyaml = ">6.0"
dataclasses-json = "==0.5.*,>=0.5.2"
pytest-asyncio = "^0.15.1"
jsonpath-ng = "^1.5.3"
elasticsearch = "<7.0"
bleach = ">=3.3.1"
tenacity = ">=8.0.0"
pydantic = {version = "^2.11"}
SQLAlchemy = "^2.0.43"
asyncpg = "^0.30.0"
typing-extensions = "^4.14.1"
eval-type-backport = "^0.2.2"
pytest-postgresql = "^4.1.1"
deepdiff = "^8.6.1"
importlib-metadata = "=4.11.4"
certifi = "2024.7.4"
python-dateutil = "^2.8.2"
six = "^1.16.0"
urllib3 = "^1.26.9"
pcdc-aws-client = {git = "https://github.com/chicagopcdc/pcdc-aws-client.git", rev = "1.3.0"}
jsonschema = "^4.17.3"
werkzeug = "2.2.2"
pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "0.1.2"}
aiocache = "0.11.1"
python-multipart = "^0.0.20"
authutils = { git = "https://github.com/chicagopcdc/authutils", branch="fastapi-upgrade", extras = ["fastapi"]}
psycopg2-binary = "<3"

[tool.poetry.group.dev.dependencies]
pytest = "7.0.0"
pytest-postgresql = "^4.1.1"
pytest-cov = "^2.8"
pyyaml = ">6.0"
requests = "^2.22"
respx = "*"
nest-asyncio = "^1.5.1"

[tool.poetry.plugins."gearbox.modules"]
"user_input" = "gearbox.routers.user_input"
"site" = "gearbox.routers.site"
"study" = "gearbox.routers.study"
"eligibility_criteria" = "gearbox.routers.eligibility_criteria"
"el_criteria_has_criterion" = "gearbox.routers.el_criteria_has_criterion"
"input_type" = "gearbox.routers.input_type"
"match_conditions" = "gearbox.routers.match_conditions"
"match_form" = "gearbox.routers.match_form"
"value" = "gearbox.routers.value"
"criterion"="gearbox.routers.criterion"
"criterion_staging"="gearbox.routers.criterion_staging"
"study_algorithm_engine" = "gearbox.routers.study_algorithm_engine"
"study_version" = "gearbox.routers.study_version"
"study_link" = "gearbox.routers.study_link"
"study_has_patient" = "gearbox.routers.study_has_patient"
"unit" = "gearbox.routers.unit"
"raw_criteria" = "gearbox.routers.raw_criteria"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
